Fix for navbar on mobile devices (#68)
* fix for nav bar on mobile devices under 768px

* Added jquery changes

* Moving button

* Fix for legacy mobile phones

* fix for top menu on mobile phones

* break-all --> break-word for breadcrumb line wrapping

--- a/f5_sphinx_theme/static/css/f5-theme.css
+++ b/f5_sphinx_theme/static/css/f5-theme.css
@@ -274,7 +274,7 @@ ul.site-breadcrumb-list {
 .site-breadcrumb-list {
   padding: 0;
   word-wrap: break-word;
-  word-break: break-all;
+  word-break: break-word;
   font-size: 13px;
 }
 
@@ -886,3 +886,62 @@ table.docutils.footnote, table.docutils.footnote > tbody, table.docutils.footnot
     margin-top: 0;
 }
 
+
+/*
+ Mobile phone navbar
+*/
+
+#dismiss {
+    width: 100%;
+    height: 0px;
+    visibility: hidden;
+    line-height: 35px;
+    text-align: center;
+    cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  #sidebar.active {
+    margin-left: 0;
+    margin-bottom: 30px;
+    min-width: 100vw;
+    max-width: 100%;
+    overflow-x: unset;
+  }
+  #sidebar {
+    margin-left: -100%;
+    margin-right: 0px;
+  }
+  #content {
+    margin-left: 0px;
+  }
+  #content.active {
+    margin-left: 0;
+  }
+  #dismiss {
+    height: 35px;
+    visibility: visible;
+  }
+  .docs-container {
+    margin-left: 0px;
+  }
+  #sidebarCollapse {
+    visibility: hidden;
+    display: none;
+  }
+  .site-article-inner {
+    width: 100%;
+  }
+}
+
+/* Older mobile phones with 320px screen */
+@media (max-width: 330px) {
+  #sidebar {
+    max-width: 300px;
+  }
+  .corp-header ul {
+    width: 90%;
+    margin: auto;
+    padding-left: 0;
+  }
+}
